[project]
name = "educational-gemma-3-270m"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "huggingface>=0.0.1",
    "ipykernel>=7.1.0",
    "ruff>=0.14.9",
    "ty>=0.0.1a34",
]
